# MIPI_driver_pico

./: .gitignore  CMakeLists.txt  readme.md
example/: readme.md
example/square/: CMakeLists.txt  main.c
src/: mipi_driver.c
src/include/: mipi_dcs.h  mipi_driver.h  settings.h
